--- a/result.cabal
+++ b/result.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Data.Result
-  build-depends:       base,
+  build-depends:       base >= 4 && < 5,
                        semigroups,
                        keys
   default-language:    Haskell2010
