--- a/result.cabal
+++ b/result.cabal
@@ -16,6 +16,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Data.Result
   build-depends:       base >= 4 && < 5,
+                       bifunctors,
                        semigroups,
                        keys
   default-language:    Haskell2010
