--- a/result.cabal
+++ b/result.cabal
@@ -14,10 +14,13 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Data.Result
+  exposed-modules:     Data.Result,
+                       Control.Monad.Trans.Result
   build-depends:       base >= 4 && < 5,
                        bifunctors,
+                       mtl,
                        semigroups,
+                       transformers,
                        keys
   default-language:    Haskell2010
 
